--- a/login.html
+++ b/login.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kadai</title>
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <main>
@@ -25,7 +26,7 @@
                 <label for="password" class="col-md-4 col-form-label text-md-right">パスワード</label>
                 <div class="col-md-6">
 									<input v-model.trim="$v.password.$model" id="password" type="password" class="form-control" name="password" autocomplete="password"><br>
-									<span class="error" style="color: #ff0000">{{errorMessage}}</span>
+									<span v-cloak class="error" style="color: #ff0000">{{errorMessage}}</span>
 								</div>
               </div>
             <div class="form-group row mb-0">
