--- a/list.html
+++ b/list.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>課題</title>
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-		<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>課題</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <main>
@@ -18,7 +18,7 @@
 					<th class="comment">名前</th>
 					<th class="button">生年月日</th>
 					<th class="button">性別</th>
-					<th class="button">メール</th>
+					<th class="button">Eメール</th>
 					<th class="button">郵便番号</th>
 					<th class="button">住所</th>
 					<th class="button">仕事</th>
@@ -73,7 +73,7 @@
 										<p v-cloak class="col-12" style="color: #ff0000">{{genderErrorMessage}}</p>
 									</div>
 									<div class="form-group row">
-										<label for="email" class="col-md-4 col-form-label text-md-right">メールアドレス</label>
+										<label for="email" class="col-md-4 col-form-label text-md-right">Eメール</label>
 										<div class="col-md-6">
 											<input v-model.trim="email" type="email" id="email" class="form-control" autocomplete="メールアドレス">
 										</div>
@@ -123,7 +123,7 @@
 					</div>
 				</div>
 			</div>
-	</div>
+		</div>
 </main>
 	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/vuelidate@0.7.4/dist/vuelidate.min.js"></script>
